1007-10-18  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclconf.c: Fixed NsTclConfigObjCmd() to correctly set the
	returned value of an default boolean param to 0/1 and not just
	blindly parrot what user has given (true/false for example) as
	this could (and it does!) break Tcl expressions.

2007-11-21  Vlad Seryakov  <seryakov@users.sf.net>
	
	* nsd/driver.c: Use WideInt version of config function when reading
	readahead value because it uses maxinput which is WideInt

1007-10-18  Zoran Vasiljevic <vasiljevic@users.sf.net>

	nsd/fd.c: Do not attempt to setup unlimited number of open files
	per process, as this usually never suceeds.

2007-11-17  Vlad Seryakov  <seryakov@users.sf.net>

	* configure.in: Fixed absence of semicolon between paths for 
	linker in -rpath

	* include/Makefile.win32:
	Make sure src incude goes first	

2007-11-13  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/urlspace.c: Make Ns_UrlSpecificWalk public function because it
	is used in many places already and thus shoul dbe public

	* include/nsthread.h:
	* nsd/nsd.h: check HAVE_CONFIG_H before including config.h

	* Makefile.win32: Updated build process, put help instructions, removed
	automatic config/makefile generations

2007-11-13  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile.win32
	* include/nsthread.h:
	* include/Makefile.module
	* include/Makefile.win32
	* nsthread/winthread.c:
	* nsthread/Makefile:
	* nsd/Makefile:
	* nscp/Makefile:
	* nssock/Makefile:
	* nsdb/Makefile:
	* nscgi/Makefile:
	* nslog/Makefile:
	* nsd/nsmain.c:
	* nsd/tcltime.c:
	* nsd/tclmisc.c: Initial Windows port, still work in progress. 
        New makefile added to perform compiling fromcommand line using the same top
	level makefile. To compile for windows, edit include/Makefile.build and
	replace include/Makefile.module with include/Makefile.win32. 

	Windows port does not use config.h, all platform specific defines are in nsthread.h