@@ -1,3 +1,9 @@
+2007-12-02  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* nsd/tcljob.c: Temporary change thread name to the queueId:id during
+	callback execution for easier logging. Thread name will clearly indicate which 
+	job is being executed
+
 1007-10-18  Zoran Vasiljevic <vasiljevic@users.sf.net>
 
 	* nsd/tclconf.c: Fixed NsTclConfigObjCmd() to correctly set the
